Wark-around issue with sidebar flickering at startup.

--- a/client/components/sidebar/sidebar.less
+++ b/client/components/sidebar/sidebar.less
@@ -91,10 +91,10 @@
 //////////////////////////////////////////////////////
 // Animation
 
-.sidebar-container.ng-hide-add {
+.sidebar-container.activated.ng-hide-add {
   animation: 0.5s slideOutLeft ease;
 }
 
-.sidebar-container.ng-hide-remove {
+.sidebar-container.activated.ng-hide-remove {
   animation: 0.5s slideInLeft ease;
 }
